# Change log

Date          Version   Comment
2021/04/02    1.4.1     Support Lesson export.
2021/03/27    1.4.0     Export embedded images for Word 2020/365 compatibility.
2021/02/24    1.3.3     Remove superfluous markup for bold and italic text.
2020/12/13    1.3.2     Add explicit warning about encoded images in exported Word files.
2020/08/02    1.3.1     Always clean namespaces when converting, to assist Glossary import plugin.
2020/07/04    1.3.0     Refactored Word to XHTML conversion into a class, for re-use elsewhere.
2018/12/09    1.2.8     Fix erroneous behaviour during Behat testing.
2018/08/06    1.2.7     Fix get_reason declaration in Privacy API code to make it more compatible with PHP 5/7.
2018/06/04    1.2.6     Support Privacy API for GDPR compliance.
2017/11/12    1.2.5     Handle headings with formatting properly, clean line-height property.
2017/10/23    1.2.4     Handle temporary Zip file folder correctly on import, fixed by Leon Stringer.
2017/09/05    1.2.3     Don't raise the memory limit for XSLT any more, fix coding standards errors.
2017/08/14    1.2.2     Handle list item duplication bug inside adjacent table cells.
2017/04/21    1.2.0     Use Bootstrap panel class for textboxes, use canonical tempdir reference.
2017/02/19    1.1.8     Support setting the mapping between Word heading style and HTML heading element.
2017/02/04    1.1.7     Handle block quotations, and textbox exports.
2017/02/02    1.1.6     Handle tables used as textboxes in a generic way.
2017/01/18    1.1.5     Handle bookmarks/cross-references, improve image export and map heading levels.
2017/01/17    1.1.4     Finally get images to export properly.
2017/01/05    1.1.3     Fix error when handling empty table cells.
2016/12/11    1.1.2     Improve export Word file formatting.
2016/11/07    1.1.1     Remove requirement to install booktool_importhtml.
2016/10/31    1.1.0     Retain table border style, handle WMF images better, support pre-formatted text.