@@ -50,6 +50,11 @@ $string['wordimport:import'] = 'Import Microsoft Word file';
 $string['xsltunavailable'] = 'You need the XSLT library installed in PHP to save this Word file';
 
 // Strings used in settings.
-$string['settings'] = 'Word file import settings';
+$string['settings'] = 'Microsoft Word file Import/Export (Book) settings';
 $string['heading1stylelevel'] = 'Heading element level for Heading 1 style';
 $string['heading1stylelevel_desc'] = 'HTML heading element level to which the Word "Heading 1" style should be mapped';
+$string['exportformat'] = 'Export format.';
+$string['exportformat_desc'] = 'Export format.';
+$string['exportformat_help'] = 'Choose Word 2020/365 compatible format if you have access to Word 2019, Word 2020 or Word 365. Otherwise choose Word 2010, which requires an external Word template in order to be able to convert images into a usable format. See <a href="http://www.moodle2word.net/mod/page/view.php?id=143">more information on how to convert them back into embedded images</a>.';
+$string['exportformat_embedded'] = 'Word 2010';
+$string['exportformat_encoded'] = 'Word 2020';
