@@ -24,8 +24,9 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2021040300;              // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2021040500;              // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires = 2016052300;               // Requires Moodle 3.1 or higher.
 $plugin->component = 'booktool_wordimport';   // Full name of the plugin (used for diagnostics).
 $plugin->maturity = MATURITY_STABLE;
-$plugin->release = '1.4.1 (Build: 2021040300)'; // Human readable version information.
+$plugin->release = '1.4.2 (Build: 2021040500)'; // Human readable version information.
+$plugin->dependencies = array('booktool_importhtml' => 2016052300);
