@@ -1,7 +1,8 @@
 # Change log
 
 Date          Version   Comment
-2021/04/02    1.4.1     Support Lesson export.
+2021/04/05    1.4.2     Add support for Lesson import/export from and to Word files.
+2021/04/03    1.4.1     Export to Word 2020/365 compatible format to support embedded images.
 2021/03/27    1.4.0     Export embedded images for Word 2020/365 compatibility.
 2021/02/24    1.3.3     Remove superfluous markup for bold and italic text.
 2020/12/13    1.3.2     Add explicit warning about encoded images in exported Word files.
